fix header align 3

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 #logo {
-    margin-left: 2em;
+    margin-left: 3em;
     width: 1.5em;
 }
 
